--- a/Trivia/Trivia/Base.lproj/LaunchScreen.storyboard
+++ b/Trivia/Trivia/Base.lproj/LaunchScreen.storyboard
@@ -15,17 +15,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TRIVIA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ya-of-iMz">
-                                <rect key="frame" x="82" y="251.5" width="156" height="65"/>
-                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="50"/>
-                                <color key="textColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="NA4-9F-g2F">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchAppImage" translatesAutoresizingMaskIntoConstraints="NO" id="gGY-yN-Ikc">
+                                <rect key="frame" x="117.5" y="171.5" width="85" height="85"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="gGY-yN-Ikc" secondAttribute="height" multiplier="1:1" id="qaR-Ol-LGl"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trivia" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1Y-K4-CCn">
+                                <rect key="frame" x="103.5" y="258.5" width="113" height="51"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="47"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.18731190640000001" green="0.073922919579999996" blue="0.30661026549999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7ya-of-iMz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PrP-uk-oMf"/>
-                            <constraint firstItem="7ya-of-iMz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="x34-So-gWO"/>
+                            <constraint firstItem="NA4-9F-g2F" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="1hq-vf-eNl"/>
+                            <constraint firstItem="q1Y-K4-CCn" firstAttribute="top" secondItem="gGY-yN-Ikc" secondAttribute="bottom" constant="2" id="9Ol-EA-o0G"/>
+                            <constraint firstItem="NA4-9F-g2F" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="GBj-tt-Jzw"/>
+                            <constraint firstItem="gGY-yN-Ikc" firstAttribute="height" secondItem="NA4-9F-g2F" secondAttribute="height" multiplier="0.15" id="Ppz-Lv-e1e"/>
+                            <constraint firstItem="NA4-9F-g2F" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="agV-h6-hTM"/>
+                            <constraint firstItem="gGY-yN-Ikc" firstAttribute="centerX" secondItem="NA4-9F-g2F" secondAttribute="centerX" id="bWL-nb-CBR"/>
+                            <constraint firstItem="q1Y-K4-CCn" firstAttribute="centerY" secondItem="NA4-9F-g2F" secondAttribute="centerY" id="eQO-ic-nvS"/>
+                            <constraint firstItem="NA4-9F-g2F" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="qFc-e3-eVt"/>
+                            <constraint firstItem="q1Y-K4-CCn" firstAttribute="centerX" secondItem="NA4-9F-g2F" secondAttribute="centerX" id="vmm-YU-8LH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -35,4 +51,8 @@
             <point key="canvasLocation" x="52.5" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchAppImage" width="256" height="256"/>
+        <image name="LaunchScreenBG" width="1200" height="1000"/>
+    </resources>
 </document>
